Revert "Merge remote-tracking branch 'upstream/main' into helidon-4.2.x"
This reverts commit fe18f5be70fd9c4f7c1cd2fcf2e93c532f65a233, reversing
changes made to 8731b9acfdc4276c93344af3a76e3d2be232067f.