@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2025 Oracle and/or its affiliates.
+ * Copyright (c) 2021, 2023 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -40,7 +40,6 @@ public class FixedRateSchedulingTest {
 
     static final long ERROR_MARGIN_MILLIS = 500;
 
-    @SuppressWarnings("removal")
     @Test
     void fixedRateDelayDeprecated() {
         IntervalMeter meter = new IntervalMeter();
@@ -67,9 +66,9 @@ public class FixedRateSchedulingTest {
         IntervalMeter meter = new IntervalMeter();
         ScheduledExecutorService executorService = ScheduledThreadPoolSupplier.create().get();
         try {
-            FixedRate.builder()
+            Scheduling.fixedRate()
                     .executor(executorService)
-                    .interval(Duration.ofSeconds(2))
+                    .delay(2)
                     .task(cronInvocation -> meter
                             .start()
                             .sleep(200, TimeUnit.MILLISECONDS)
@@ -91,11 +90,12 @@ public class FixedRateSchedulingTest {
             AtomicLong lastEndTime = new AtomicLong();
             AtomicLong lastStartTime = new AtomicLong();
             CountDownLatch latch = new CountDownLatch(2);
-            FixedRate.builder()
+            Scheduling.fixedRate()
                     .executor(executorService)
                     .delayType(FixedRate.DelayType.SINCE_PREVIOUS_START)
-                    .delayBy(Duration.ZERO)
-                    .interval(Duration.ofMillis(delayMillis))
+                    .initialDelay(0)
+                    .timeUnit(TimeUnit.MILLISECONDS)
+                    .delay(delayMillis)
                     .task(i -> {
                         lastStartTime.set(System.currentTimeMillis());
                         Thread.sleep(300);
@@ -120,11 +120,12 @@ public class FixedRateSchedulingTest {
             AtomicLong lastEndTime = new AtomicLong();
             AtomicLong lastStartTime = new AtomicLong();
             CountDownLatch latch = new CountDownLatch(2);
-            FixedRate.builder()
+            Scheduling.fixedRate()
                     .executor(executorService)
                     .delayType(FixedRate.DelayType.SINCE_PREVIOUS_END)
-                    .delayBy(Duration.ZERO)
-                    .interval(Duration.ofMillis(delayMillis))
+                    .initialDelay(0)
+                    .timeUnit(TimeUnit.MILLISECONDS)
+                    .delay(delayMillis)
                     .task(i -> {
                         lastStartTime.set(System.currentTimeMillis());
                         Thread.sleep(300);
@@ -141,7 +142,6 @@ public class FixedRateSchedulingTest {
         }
     }
 
-    @SuppressWarnings("removal")
     @Test
     void fixedRateInitialDelayDeprecated() {
         IntervalMeter meter = new IntervalMeter();
@@ -166,7 +166,7 @@ public class FixedRateSchedulingTest {
 
             meter.awaitTill(2, 20, TimeUnit.SECONDS);
 
-            long actualInitialDelay = meter.getFirst().startTime().toEpochMilli() - initialTime;
+            long actualInitialDelay = meter.get(0).startTime().toEpochMilli() - initialTime;
             long difference = Math.abs(actualInitialDelay - expectedInitialDelay);
 
             assertThat("Initial delay " + Duration.ofMillis(actualInitialDelay).toString()
@@ -187,10 +187,11 @@ public class FixedRateSchedulingTest {
 
         try {
 
-            var builder = FixedRate.builder()
+            var builder = Scheduling.fixedRate()
                     .executor(executorService)
-                    .delayBy(Duration.ofMillis(expectedInitialDelay))
-                    .interval(Duration.ofSeconds(1))
+                    .initialDelay(expectedInitialDelay)
+                    .delay(1000)
+                    .timeUnit(TimeUnit.MILLISECONDS)
                     .task(cronInvocation -> meter
                             .start()
                             .sleep(200, TimeUnit.MILLISECONDS)
@@ -201,7 +202,7 @@ public class FixedRateSchedulingTest {
 
             meter.awaitTill(2, 20, TimeUnit.SECONDS);
 
-            long actualInitialDelay = meter.getFirst().startTime().toEpochMilli() - initialTime;
+            long actualInitialDelay = meter.get(0).startTime().toEpochMilli() - initialTime;
             long difference = Math.abs(actualInitialDelay - expectedInitialDelay);
 
             assertThat("Initial delay " + Duration.ofMillis(actualInitialDelay).toString()
@@ -213,7 +214,6 @@ public class FixedRateSchedulingTest {
         meter.assertAverageDuration(Duration.ofSeconds(1), Duration.ofMillis(ERROR_MARGIN_MILLIS));
     }
 
-    @SuppressWarnings("removal")
     @Test
     void fixedRateInvalidDelayDeprecated() {
         ScheduledExecutorService executorService = ScheduledThreadPoolSupplier.create().get();
@@ -234,9 +234,9 @@ public class FixedRateSchedulingTest {
     void fixedRateInvalidDelay() {
         ScheduledExecutorService executorService = ScheduledThreadPoolSupplier.create().get();
         try {
-            Assertions.assertThrows(IllegalArgumentException.class, () -> FixedRate.builder()
+            Assertions.assertThrows(IllegalArgumentException.class, () -> Scheduling.fixedRate()
                     .executor(executorService)
-                    .interval(Duration.ZERO)
+                    .delay(0)
                     .task(inv -> {
                     })
                     .build());
@@ -246,7 +246,6 @@ public class FixedRateSchedulingTest {
         }
     }
 
-    @SuppressWarnings("removal")
     @Test
     void fixedRateInvalidMissingDelayDeprecated() {
         ScheduledExecutorService executorService = ScheduledThreadPoolSupplier.create().get();
@@ -266,7 +265,7 @@ public class FixedRateSchedulingTest {
     void fixedRateInvalidMissingDelay() {
         ScheduledExecutorService executorService = ScheduledThreadPoolSupplier.create().get();
         try {
-            Assertions.assertThrows(Errors.ErrorMessagesException.class, () -> FixedRate.builder()
+            Assertions.assertThrows(Errors.ErrorMessagesException.class, () -> Scheduling.fixedRate()
                     .executor(executorService)
                     .task(inv -> {
                     })
@@ -277,7 +276,6 @@ public class FixedRateSchedulingTest {
         }
     }
 
-    @SuppressWarnings("removal")
     @Test
     void fixedRateMissingTaskDeprecated() {
         ScheduledExecutorService executorService = ScheduledThreadPoolSupplier.create().get();
@@ -296,9 +294,9 @@ public class FixedRateSchedulingTest {
     void fixedRateMissingTask() {
         ScheduledExecutorService executorService = ScheduledThreadPoolSupplier.create().get();
         try {
-            Assertions.assertThrows(Errors.ErrorMessagesException.class, () -> FixedRate.builder()
+            Assertions.assertThrows(Errors.ErrorMessagesException.class, () -> Scheduling.fixedRate()
                     .executor(executorService)
-                    .interval(Duration.ofSeconds(2))
+                    .delay(2)
                     .build());
 
         } finally {
